# ctop-rs

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile.dev  README.md  RELEASING.md  build.rs  flake.nix  gen-enum  nix-build-deb  wrapper.h
docs/: local-dev.md  resources.md
procfs/: Cargo.toml
procfs/src/: lib.rs
src/: container_meta_reader.rs  errors.rs  init.rs  join.rs  lib.rs  main.rs  network_reader.rs  proc_reader.rs  read.rs
src/api/: mod.rs  result_parsing.rs  time.rs  union.rs
src/proc/: mod.rs
src/proc_bindings/: errors.rs  init.rs  mod.rs  read.rs
