[package]
name = "ctop-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.40", features = ["derive", "string"] }
crossterm = "0.29.0"
libc = "0.2.174"
nix = { version = "0.30.1", features = ["fs", "poll", "dir", "feature"] }
ratatui = "0.29.0"

[build-dependencies]
bindgen = "0.72.0"
pkg-config = "0.3.32"
