[package]
name = "ctop-rs"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-or-later"
repository = "https://github.com/LadySerena/ctop-rs"
readme = "README.md"
description = "An attempt at yet another top clone but this time with container support"

[lib]
doctest = false

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
containerd-client = "0.8.0"
nix = { version = "0.30.1" }
tabwriter = "1.4.1"
tokio = { version = "1.49.0", features = ["full"] }

[build-dependencies]
bindgen = "0.72.0"
pkg-config = "0.3.32"

[package.metadata.deb]
maintainer = "Serena Tiede <serena.tiede+ctop-rs@gmail.com>"
depends = "libproc2-0"
